--- a/src/components/ClaimMeal/ClaimMeal.css
+++ b/src/components/ClaimMeal/ClaimMeal.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
 * {
     box-sizing: border-box;
 }
@@ -16,7 +17,7 @@
 }
 
 
-.meal{
+.ClaimMeal .meal{
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -27,13 +28,13 @@
     width:40%
 }
 
-.image{
+.ClaimMeal .image{
     width: 400px;
     box-shadow: 50px 50px #fff;
     margin:50px
 }
 
-h4{
+.ClaimMeal h4{
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -43,7 +44,7 @@ h4{
     margin-top: 20px;
 }
 
-p.location{
+.ClaimMeal p.location{
     font-family:'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -52,7 +53,7 @@ p.location{
     margin-top: 5px;
 }
 
-p.quantity{
+.ClaimMeal p.quantity{
     font-family:'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -62,14 +63,14 @@ p.quantity{
 }
 
 
-.form{
+.ClaimMeal .form{
     display: flex;
     flex-direction: column;
     margin-top:30px;
     width:400px;
 }
 
-.formStyle{
+.ClaimMeal .formStyle{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -78,11 +79,11 @@ p.quantity{
     font-weight: normal;
 }
 
-sup{
+.ClaimMeal sup{
     color: rgb(255, 0, 0)
 }
 
-.input{
+.ClaimMeal .input{
     background: #FFFFFF;
     border: 1px solid #545D69;
     box-sizing: border-box;
@@ -94,15 +95,15 @@ sup{
 
 }
 
-input::after{
+.ClaimMeal input::after{
     background:#fff;
 }
 
-input:focus, textarea:focus, select:focus{
+.ClaimMeal input:focus, textarea:focus, select:focus{
     outline: none;
 }
 
-.Submit{
+.ClaimMeal .Submit{
     margin-top:20px;
     background: #03B664;
     border-radius: 8px;
@@ -112,7 +113,7 @@ input:focus, textarea:focus, select:focus{
 
 }
 
-.Submit:hover{
+.ClaimMeal .Submit:hover{
     background: #FFB701
 }
 
@@ -126,18 +127,18 @@ input:focus, textarea:focus, select:focus{
         display: block;
     }
 
-    .meal{
+    .ClaimMeal .meal{
         width: 100%;
         text-align: center;
     }
 
-    .form{
+    .ClaimMeal .form{
         width: 70%;
         margin:auto;
         
     }
 
-    h4{
+    .ClaimMeal h4{
         text-align: center;
     }
 
@@ -145,7 +146,7 @@ input:focus, textarea:focus, select:focus{
 
 @media only screen and (max-width: 570px) {
     /* For Mobile screens */
-    .image{
+    .ClaimMeal .image{
         width: 200px;
         box-shadow: 30px 30px #fff;
     }
