--- a/src/components/InfoComponent/InfoComponent.css
+++ b/src/components/InfoComponent/InfoComponent.css
@@ -4,59 +4,59 @@
     box-sizing: border-box;
 }
 
-.gray-theme {
+.InfoComponentStyle .gray-theme {
     background-color:#F2F2F2;
     color:#000;
 }
 
-.gray-theme .info-img {
+.InfoComponentStyle .gray-theme .info-img {
     box-shadow: -50px -50px white;
 
 }
 
-.green-theme {
+.InfoComponentStyle .green-theme {
     background-color:#03B664;
     color:#fff;
 }
 
-.green-theme .info-img {
+.InfoComponentStyle .green-theme .info-img {
     box-shadow: -50px -50px white;
 
 }
 
 @media screen and (min-width: 600px) {
-    .green-theme {
+    .InfoComponentStyle .green-theme {
       display: table;
       width: 100%;
       direction: rtl;
     }
    
-    .green-theme content {
+    .InfoComponentStyle .green-theme content {
       display: table-cell;
       width: 25%;
     }
 }
 
-.white-theme {
+.InfoComponentStyle .white-theme {
     background-color:#fff;
     color:#000;
 }
 
-.white-theme .info-img {
+.InfoComponentStyle .white-theme .info-img {
     box-shadow: -50px -50px #E5E5E5;
 
 }
 
-.content, .media{
+.InfoComponentStyle .content, .media{
     width: 50%;
     display: inline-block;
 }
 
-.content{
+.InfoComponentStyle .content{
     padding: 150px;
 }
 
-.content h2{
+.InfoComponentStyle .content h2{
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -64,7 +64,7 @@
     line-height: 37px;
 }
 
-.content p{
+.InfoComponentStyle .content p{
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -72,7 +72,7 @@
     line-height: 25px;
 }
 
-.content p.small{
+.InfoComponentStyle .content p.small{
     font-family:'Roboto', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -81,26 +81,26 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
-.media{
+.InfoComponentStyle .media{
     text-align: center;
 }
 
-.info-img {
+.InfoComponentStyle .info-img {
     width: 400px;
 }
 
 
 @media only screen and (max-width: 700px) {
     /* For mobile screens */
-    .content, .media{
+    .InfoComponentStyle .content, .media{
         width: 100%;
     }
 
-    .content{
+    .InfoComponentStyle .content{
         padding: 0px;
     }
 
-    .info-img {
+    .InfoComponentStyle .info-img {
         width: 200px;
         box-shadow: none;
         margin-top: 20px;
@@ -109,15 +109,15 @@
 
 @media only screen and (max-width: 1000px) {
     /* For Tablet screens */
-    .content, .media{
+    .InfoComponentStyle .content, .media{
         width: 100%;
     }
 
-    .content{
+    .InfoComponentStyle .content{
         padding: 90px;
     }
 
-    .info-img {
+    .InfoComponentStyle .info-img {
         margin-top: 90px;
     }
 
