--- a/src/components/HeroComponent/HeroComponent.css
+++ b/src/components/HeroComponent/HeroComponent.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-.bg{
+.HeroComponentStyle .bg{
   background-color: #03B664;
   color: white;
   display: flex;
@@ -17,13 +17,13 @@
   overflow: hidden;
 }
 
-.side-crop { 
+.HeroComponentStyle .side-crop { 
     max-height: 400px; 
     overflow: none;
     margin-bottom: 0px;
 }
 
-.side-crop img{
+.HeroComponentStyle .side-crop img{
     width: 800px;
     height : auto;
     left: 320px;
@@ -34,7 +34,7 @@
     bottom: 0px;
 }
 
-h1{
+.HeroComponentStyle h1{
     width: 787px;
     height: 75px;
     left: calc(50% - 787px/2 - 0.5px);
@@ -45,11 +45,41 @@ h1{
     text-align: center;
 }
 
-p{
+.HeroComponentStyle p{
     width: 682px;
     height: 62px;
     font-size: 20px;
     line-height: 140.62%;
     text-align: center;
 
+}
+
+@media only screen and (max-width: 900px) {
+    /* For Tablet screens */
+    .HeroComponentStyle .side-crop img{ 
+        width:600px
+    }
+
+}
+
+@media only screen and (max-width: 700px) {
+    /* For mobile screens */
+
+    .HeroComponentStyle .bg{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: column;
+    }
+
+    .HeroComponentStyle h1{
+        width: 400px;
+    }
+    
+    .HeroComponentStyle p{
+        width: 400px;
+    }
+    .HeroComponentStyle .side-crop img{ 
+        width:400px;
+    }
 }
