Refactor: fix responsiveness
Closes #14

--- a/src/components/Testimonials/Testimonial.scss
+++ b/src/components/Testimonials/Testimonial.scss
@@ -1,15 +1,15 @@
 .testimonial-person {
   border-radius: 50%;
+  width: 90px;
+  height: 90px;
 }
 
 q {
   font-family: Roboto;
   font-size: 32px;
   font-style: normal;
-  font-weight: 400;
-  line-height: 49px;
+  line-height: 50px;
   letter-spacing: 0em;
-  text-align: center;
 }
 
 .blockquote-footer {
@@ -17,8 +17,13 @@ q {
   font-family: Roboto;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 24px;
   letter-spacing: 0em;
-  text-align: center;
+}
+
+@media only screen and (max-width: 576px) {
+  q {
+    font-size: 16px;
+    line-height: 25px;
+  }
 }
