--- a/src/components/donateForm/DonationForm.scss
+++ b/src/components/donateForm/DonationForm.scss
@@ -1,10 +1,4 @@
-.donationForm {
-  height: 625px;
-}
-
-.donationDesc {
-  text-align: left;
-}
-.donationText {
-  width: 550px;
+.side-div {
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
 }
