--- a/src/components/HeroComponent/HeroComponent.css
+++ b/src/components/HeroComponent/HeroComponent.css
@@ -1,85 +1,88 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.HeroComponentStyle .bg{
-  background-color: #03B664;
+.HeroComponentStyle .bg {
+  background-color: #03b664;
   color: white;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  /* padding-top: 2rem; */
+  /* min-height: calc(100vh - 2rem); */
   min-height: 100vh;
   margin: 0;
   font-family: 'Roboto', sans-serif;
   overflow: hidden;
 }
-
-.HeroComponentStyle .side-crop { 
-    max-height: 400px; 
-    overflow: none;
-    margin-bottom: 0px;
+.bg {
+  padding-top: 2rem;
+  min-height: calc(100vh - 2rem);
+}
+.HeroComponentStyle .side-crop {
+  max-height: 400px;
+  overflow: none;
+  margin-bottom: 0px;
 }
 
-.HeroComponentStyle .side-crop img{
-    width: 800px;
-    height : auto;
-    left: 320px;
-    top: 353px;
-    filter: drop-shadow(4px 4px 9px rgba(0, 0, 0, 0.25));
-    border-radius: 5px;
-    margin-top:40px;
-    bottom: 0px;
+.HeroComponentStyle .side-crop img {
+  width: 800px;
+  height: auto;
+  left: 320px;
+  top: 353px;
+  filter: drop-shadow(4px 4px 9px rgba(0, 0, 0, 0.25));
+  border-radius: 5px;
+  margin-top: 40px;
+  bottom: 0px;
 }
 
-.HeroComponentStyle h1{
-    width: 787px;
-    height: 75px;
-    left: calc(50% - 787px/2 - 0.5px);
-    top: 51px;
-    font-weight: 500;
-    font-size: 64px;
-    line-height: 75px;
-    text-align: center;
+.HeroComponentStyle h1 {
+  width: 787px;
+  height: 75px;
+  left: calc(50% - 787px / 2 - 0.5px);
+  top: 51px;
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 75px;
+  text-align: center;
 }
 
-.HeroComponentStyle p{
-    width: 682px;
-    height: 62px;
-    font-size: 20px;
-    line-height: 140.62%;
-    text-align: center;
-
+.HeroComponentStyle p {
+  width: 682px;
+  height: 62px;
+  font-size: 20px;
+  line-height: 140.62%;
+  text-align: center;
 }
 
 @media only screen and (max-width: 900px) {
-    /* For Tablet screens */
-    .HeroComponentStyle .side-crop img{ 
-        width:600px
-    }
-
+  /* For Tablet screens */
+  .HeroComponentStyle .side-crop img {
+    width: 600px;
+  }
 }
 
 @media only screen and (max-width: 700px) {
-    /* For mobile screens */
+  /* For mobile screens */
 
-    .HeroComponentStyle .bg{
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        flex-direction: column;
-    }
+  .HeroComponentStyle .bg {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+  }
 
-    .HeroComponentStyle h1{
-        width: 400px;
-    }
-    
-    .HeroComponentStyle p{
-        width: 400px;
-    }
-    .HeroComponentStyle .side-crop img{ 
-        width:400px;
-    }
+  .HeroComponentStyle h1 {
+    width: 400px;
+  }
+
+  .HeroComponentStyle p {
+    width: 400px;
+  }
+  .HeroComponentStyle .side-crop img {
+    width: 400px;
+  }
 }
