--- a/src/components/NarrowCta/NarrowCta.css
+++ b/src/components/NarrowCta/NarrowCta.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.NarrowCtaStyle .container{
-  background-color: #F2F2F2;
+.NarrowCtaStyle .ctaContainer {
+  background-color: #f2f2f2;
   color: 000;
   display: flex;
   align-items: center;
@@ -16,47 +16,45 @@
   flex-wrap: wrap;
 }
 
-.NarrowCtaStyle .content{
+.NarrowCtaStyle .content {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   flex-direction: column;
-  color:#03B664;
+  color: #03b664;
   font-family: 'Roboto';
   font-size: 32px;
 }
 
-.NarrowCtaStyle .content h4{
-    font-family: 'Roboto';
-    font-weight: bold;
-    font-size: 32px;
-    color: #000000;
-    margin-bottom: 0px;
+.NarrowCtaStyle .content h4 {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 32px;
+  color: #000000;
+  margin-bottom: 0px;
 }
 
-.NarrowCtaStyle .buttons{
+.NarrowCtaStyle .buttons {
   display: flex;
   align-items: center;
   justify-content: flex-start;
   flex-direction: row;
 }
 
-.NarrowCtaStyle .buttons button{
+.NarrowCtaStyle .buttons button {
   margin-right: 10px;
 }
 
 @media only screen and (max-width: 700px) {
   /* For mobile screens */
-  .NarrowCtaStyle .content{
-    margin-bottom:40px;
+  .NarrowCtaStyle .content {
+    margin-bottom: 40px;
   }
   .NarrowCtaStyle .buttons {
     display: block;
     padding-top: 10px;
   }
-  .NarrowCtaStyle .buttons button{
-    margin-bottom:20px;
+  .NarrowCtaStyle .buttons button {
+    margin-bottom: 20px;
   }
-
-
 }
