--- a/src/components/meals.css
+++ b/src/components/meals.css
@@ -3,6 +3,11 @@
   background-color: #03b664;
 }
 
+.cardSize {
+  width: 17rem;
+  height: 60vh;
+}
+
 .meals-title {
   color: aliceblue;
   padding-top: 20px;
@@ -15,33 +20,20 @@
   padding-bottom: 50px;
 }
 
-/* .card {
-  height: 356px;
-  width: 240px;
-  top: 247px;
-  top: 0;
-  margin-left: 6px;
-  margin-right: 6px;
-  margin-bottom: 50px;
-  border: none;
-  overflow: hidden;
-} */
-
-/* .card-body {
-  width: 100%;
-  height: 50%;
-} */
-
-.button {
+.buttonGreen {
+  background-color: #03b664;
+  color: rgb(255, 255, 255);
+}
+.buttonGray {
   background-color: #e5e5e5;
+  color: #000;
+}
+.button {
+  /* background-color: #ffb701; */
   height: 50px;
   width: 100%;
   border: 0;
   border: none;
-  color: black;
-  /* position: absolute;
-  bottom: 0;
-  left: 0; */
 }
 
 .button:hover {
@@ -59,7 +51,7 @@
 
 .card-img {
   width: 270px;
-  height: 270px;
+  height: 50vh;
   object-fit: cover;
 }
 
@@ -75,14 +67,7 @@
   transform: scale(1.3);
 }
 
-/* .card-title {
-  position: absolute;
-} */
-
 .card-text {
-  /* position: absolute;
-  bottom: 80px;
-  left: 18px; */
   color: gray;
 }
 
