--- a/src/components/InfoComponent/InfoComponent.css
+++ b/src/components/InfoComponent/InfoComponent.css
@@ -105,6 +105,7 @@
   }
 }
 
+
 @media only screen and (max-width: 1000px) {
   /* For Tablet screens */
   .InfoComponentStyle .content,
@@ -118,5 +119,28 @@
 
   .InfoComponentStyle .info-img {
     margin-top: 90px;
+  }
+}
+
+@media only screen and (max-width: 376px) {
+  /* For small mobile screens */
+
+  .InfoComponentStyle .content {
+    padding:50px;
+  }
+
+  .InfoComponentStyle .info-img {
+    width: 200px;
+    margin-top: 20px;
+  }
+
+  .InfoComponentStyle .gray-theme .info-img {
+    box-shadow: 15px 15px white;
+  }
+  .InfoComponentStyle .green-theme .info-img {
+    box-shadow: 15px 15px white;
+  }
+  .InfoComponentStyle .white-theme .info-img {
+    box-shadow: 15px 15px #e5e5e5;
   }
 }
