--- a/src/components/NarrowCta/NarrowCta.css
+++ b/src/components/NarrowCta/NarrowCta.css
@@ -48,13 +48,26 @@
 @media only screen and (max-width: 700px) {
   /* For mobile screens */
   .NarrowCtaStyle .content {
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
     margin-bottom: 40px;
+    margin-top: 40px;
   }
+
   .NarrowCtaStyle .buttons {
-    display: block;
-    padding-top: 10px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    margin-bottom: 40px;
+    margin-top: 40px;
   }
   .NarrowCtaStyle .buttons button {
-    margin-bottom: 20px;
+    margin:0;
+    margin-top:20px;
   }
 }
