--- a/src/components/Partners/partners.css
+++ b/src/components/Partners/partners.css
@@ -46,4 +46,11 @@
     grid-template-columns: 120px 120px 120px;
     justify-content: center;
   }
+
+  .partner-image {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+  }
 }
