--- a/src/components/HeroComponent/HeroComponent.css
+++ b/src/components/HeroComponent/HeroComponent.css
@@ -77,12 +77,13 @@
 
   .HeroComponentStyle h1 {
     width: 400px;
+    line-height: 40px;
   }
 
   .HeroComponentStyle p {
     width: 400px;
-    margin-top:40px;
-    margin-bottom:40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
   }
   .HeroComponentStyle .side-crop img {
     width: 400px;
@@ -94,14 +95,15 @@
 
   .HeroComponentStyle h1 {
     width: 290px;
-    font-size:30px;
+    font-size: 30px;
+    line-height: 40px;
   }
 
   .HeroComponentStyle p {
     width: 290px;
-    font-size:18px;
-    margin-top:10px;
-    margin-bottom:100px;
+    font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 100px;
   }
   .HeroComponentStyle .side-crop img {
     width: 300px;
