--- a/src/components/Partners/partners.css
+++ b/src/components/Partners/partners.css
@@ -5,10 +5,13 @@
 }
 
 .partner-image {
-  height: 80px;
-  width: 80px;
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
-  margin-bottom: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  justify-content: center;
+  margin: 8px auto;
 }
 
 .partners-title {
@@ -18,39 +21,14 @@
   text-align: center;
 }
 
-.partners-grid {
-  display: grid;
-  grid-template-columns: 120px 120px 120px 120px 120px 120px;
-  justify-content: center;
-}
-
-@media only screen and (max-width: 682px) {
-  .partners-grid {
-    display: grid;
-    grid-template-columns: 120px 120px 120px 120px 120px;
-    justify-content: center;
-  }
-}
-
-@media only screen and (max-width: 592px) {
-  .partners-grid {
-    display: grid;
-    grid-template-columns: 120px 120px 120px 120px;
-    justify-content: center;
-  }
-}
-
 @media only screen and (max-width: 480px) {
-  .partners-grid {
-    display: grid;
-    grid-template-columns: 120px 120px 120px;
-    justify-content: center;
-  }
-
   .partner-image {
-    height: 60px;
-    width: 60px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
-    margin-bottom: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    justify-content: center;
+    margin: 8px auto;
   }
 }
