--- a/src/components/Sponsors/Sponsors.scss
+++ b/src/components/Sponsors/Sponsors.scss
@@ -1,6 +1,11 @@
 .sponsor-image {
   width: 140px;
   height: 140px;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
+  justify-content: center;
+  margin: 8px auto;
 }
 
 .heading {
@@ -27,4 +32,10 @@
   /* identical to box height */
 
   text-align: center;
+}
+@media only screen and (max-width: 576px) {
+  .sponsor-image {
+    width: 8rem;
+    height: 8rem;
+  }
 }
