--- a/src/components/DonateForm/DonationForm.scss
+++ b/src/components/DonateForm/DonationForm.scss
@@ -1,4 +1,5 @@
 .side-div {
-  margin-bottom: -99999px;
-  padding-bottom: 99999px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
